# twingate-automator

./: .example.env  README.md  config.py  gql_query.py  main.py  pyproject.toml
